--- a/lang/english.json
+++ b/lang/english.json
@@ -3,14 +3,13 @@
     "dictionaries": {
         "message": {
             "ModJeevesInit": "Jeeves thanks you for your patronage. Version {0}",
-            "ModJeevesClosedDoor": "Jeeves has shut {0} behind {1}.",
-            "ModJeevesToggleGroundContainer": "Jeeves has {0} the items in front of you."
+            "ModJeevesClosedDoor": "Jeeves has shut {0} behind {1}."
         },
         "ModJeevesTranslations": {
             "CloseDoor": "Enable Door Closing",
-            "CloseDoorTooltip": "This will instruct Jeeves to close doors after the player moves through them.",
+            "CloseDoorTooltip": "Jeeves will close doors after the player moves through them.",
             "ManageGroundContainer": "Enable Ground Container",
-            "ManageGroundContainerTooltip": "This will instruct Jeeves to allow viewing of items on the ground in front of the player. Default Keybind: [ G ]"
+            "ManageGroundContainerTooltip": "Jeeves will show items on the ground in front of the player as a container. Default Keybind: [ G ]"
         },
         "bindable": {
             "ModJeevesToggleGroundContainer": "Toggle Ground Container"
